tests/reference/ast-program_without_line_04-1467181.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/errors/program_without_line_04.f90:2:1
  |
2 | 2 + 2
  | ^^^^^ 
